# postmark

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.agents/skills/customization-guide/: SKILL.md
.agents/skills/import-parser/: SKILL.md
.agents/skills/service-repository-reference/: SKILL.md
.agents/skills/signal-flow/: SKILL.md
.agents/skills/test-writing/: SKILL.md
.agents/skills/widget-patterns/: SKILL.md
.cursor/plans/: local-script-modules-full-plan.md  scripts_panel_plan_review_1b186b1d.plan.md  we-need-a-much-fluffy-glade.plan.md
.github/: copilot-instructions.md
.github/instructions/: architecture.instructions.md  documentation.instructions.md  pyside6.instructions.md  sqlalchemy.instructions.md  testing.instructions.md
.github/skills/customization-guide/: SKILL.md
.github/skills/import-parser/: SKILL.md
.github/skills/service-repository-reference/: SKILL.md
.github/skills/signal-flow/: SKILL.md
.github/skills/test-writing/: SKILL.md
.github/skills/widget-patterns/: SKILL.md
.github/workflows/: ci.yml  tests.yml  vendor-audit.yml
data/images/languages/: README.md
data/lsp/stubs/: pm.d.ts  pm.pyi
data/scripts/: deno_drain.mjs  dynamic_variables.json  esprima_parse.mjs  pm_bootstrap.js  pm_bootstrap.py  pm_dynamic_vars.js  pm_dynamic_vars.py  pm_json_schema.js  pm_json_schema.py  pyodide_run.mjs
data/snippets/: README.md  javascript.json  python.json
docs/: AGENTS.md  README.md
docs/api-reference/: signals.md  typedicts.md
docs/api-reference/database/: collection-repository.md  models.md  (+3 more)
docs/architecture/: data-flow.md  database-layer.md  directory-structure.md  overview.md  script-runtime.md  service-layer.md  ui-layer.md
docs/contributing/: coding-conventions.md  testing-guide.md  updating-docs.md
docs/getting-started/: installation.md  overview.md  running.md
docs/guides/: adding-auth-type.md  adding-import-parser.md  adding-script-language.md  adding-widget.md  wiring-signals.md  writing-scripts.md  writing-tests.md
docs/scripting/: collection-runner.md  examples.md  external-packages.md  javascript-api.md  local-modules.md  overview.md  postman-parity.md  python-api.md  security.md  snippets.md
docs/ui-reference/: collections.md  dialogs.md  local-scripts.md  main-window.md  navigation.md  panels.md  request-editor.md  response-viewer.md  sidebar.md  styling.md  widgets.md
scripts/: audit_vendor.py  check_md_links.py  close_stuck_qt_test_windows.py  gen_pm_bootstrap_pyodide.py  profile_startup.py
src/: AGENTS.md  main.py  qt_app_init.py
src/database/: AGENTS.md  data_paths.py  database.py
src/services/: __init__.py  assertion_service.py  collection_service.py  environment_service.py  http_service.py  import_service.py  local_script_service.py  request_history_service.py  run_history_service.py  script_service.py  script_version_service.py  snippet_generator.py  snippet_service.py
src/ui/: AGENTS.md  code_editor.py  collection_runner.py  environment_editor.py  history_panel.py  icons.py  import_dialog.py  info_popup.py  key_value_table.py  loading_screen.py  main_window.py  request_editor.py  request_tab_bar.py  response_viewer.py  tab_manager.py  theme.py  theme_manager.py  variable_line_edit.py  variable_popup.py
tests/: AGENTS.md  conftest.py  esprima_test_util.py  qt_popup_cleanup.py  test_collections.py
tests/ui/: conftest.py  test_breadcrumb_bar.py  test_code_editor.py  test_code_editor_memory.py  test_collection_header.py  test_collection_tree.py  test_collection_widget.py  test_console_panel.py  test_environment_editor.py  test_environment_selector.py  test_history_panel.py  test_http_worker.py  test_icons.py  test_import_dialog.py  test_info_popup.py  test_key_value_table.py  test_main_window.py  test_main_window_draft.py  test_main_window_save.py  test_main_window_session.py  test_main_window_tab_nav_history.py  test_main_window_tabs_navigation.py  test_request_editor.py  test_request_tab_bar.py  test_response_viewer.py  test_tab_manager.py  test_theme_manager.py  test_variable_line_edit.py  test_variable_popup.py
tests/unit/: test_environment_repository.py  test_http_service.py  test_import_parser.py  test_import_service.py  test_repository.py  test_service.py
(+557 files in other folders)
