[tool.poetry]
name = "postmark"
version = "0.1.0"
description = "A desktop API client for testing and managing HTTP requests, built with PySide6."
authors = ["Mark Krapivner <mark125@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyside6 = "^6.10.0"
sqlalchemy = "^2.0.44"
httpx = "^0.28.1"
pygments = "^2.19"
jsonpath-ng = "^1.8.0"
lxml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.9"
mypy = "^1.14"
pytest-qt = "^4.5.0"
types-pygments = "^2.19.0.20251121"
types-lxml = "^2026.2.16"
pytest-xdist = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --------------------------------------------------------------------------
# Ruff (linter + formatter)
# --------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "D"]
ignore = [
    "E501",   # line length handled by formatter
    "I001",   # import formatting conflicts with VS Code's Python formatter
    "D100",   # missing module docstring  (enforced by review, not linter)
    "D104",   # missing __init__.py docstring
    "D203",   # conflicts with D211 (no-blank-line-before-class)
    "D213",   # conflicts with D212 (multi-line-summary-first-line)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D102"]   # test methods don't need docstrings

[tool.ruff.lint.isort]
known-first-party = ["database", "ui", "services"]

# --------------------------------------------------------------------------
# Mypy
# --------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false          # relax for now; tighten later

# --------------------------------------------------------------------------
# Pyright / Pylance
# --------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.12"
extraPaths = ["src"]
reportOptionalSubscript = "error"
reportTypedDictNotRequiredAccess = "error"

# --------------------------------------------------------------------------
# Pytest
# --------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-n auto --dist loadfile"

